made come changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Shruti.This is my first webapp.
 		<h2> New heading </h2>
+		<h1> my first html </h1>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
